minimap: Fix scrollbar bottom view for non footer windows.

--- a/src/modules/minimap/ui/style.less
+++ b/src/modules/minimap/ui/style.less
@@ -17,6 +17,12 @@
         z-index: 6;
     }
 
+    .box-paper:not(.footer) {
+        .scroll-wrap {
+            margin-bottom: 40px;
+        }
+    }
+
     // game's native <select>
     span.select-wrapper {
         width: 100%;
